finished adding alternate theme

--- a/app/index.html
+++ b/app/index.html
@@ -34,6 +34,13 @@
           <li class="active"><a href="#">Home</a></li>
           <li><a href="#">About</a></li>
           <li><a href="#">Contact</a></li>
+          <!-- button to reference javascript to change to alternate theme -->
+          <li>
+            <button type="button" class="btn btn-primary navbar-btn" id="change-theme">
+              Alternate theme
+            </button>
+          </li>
+          <!-- end button -->
         </ul>
         <h3 class="text-muted">Dev1 Repository by Kyle McWeeney</h3>
       </div>
