--- a/app/index.html
+++ b/app/index.html
@@ -37,7 +37,7 @@
           <!-- button to reference javascript to change to alternate theme -->
           <li>
             <button type="button" class="btn btn-primary navbar-btn" id="change-theme">
-              Alternate theme
+              Change theme
             </button>
           </li>
           <!-- end button -->
